# strava-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/strava_mcp/: __init__.py  __main__.py  main.py  runtime.py  server.py
src/strava_mcp/cli/: __init__.py  activities.py  athlete.py  main.py  output.py  streams.py
src/strava_mcp/strava/: __init__.py  client.py  contracts.py  errors.py  oauth.py  storage.py
tests/: test_strava_cli_main.py  test_strava_mcp_main.py  test_strava_mcp_server.py  test_strava_service.py
